# nlp_project_5IABD

./: .gitignore  experimentations.md  mlflow.db  pyproject.toml  start_mlflow.sh
data/raw/SIEM_Dataset/: test.csv
mlruns/1/02b7baea3f3745cf8984666598364fd7/artifacts/reports/: classification_report.csv  confusion_matrix.csv
mlruns/1/051ba873f5544c9bb0c9fa6cf805f664/artifacts/reports/: classification_report.csv  confusion_matrix.csv
mlruns/1/2546301c34d74d81b892cbdd155e32ce/artifacts/reports/: classification_report.csv  confusion_matrix.csv
mlruns/1/2d7c3d7e26ec4a1083c13ab35ae27eaa/artifacts/reports/: classification_report.csv  confusion_matrix.csv
mlruns/1/2f930c6d9950455086fe05e89c496b40/artifacts/reports/: classification_report.csv  confusion_matrix.csv
mlruns/1/3036d38c793a4a118f587a7701c23f21/artifacts/reports/: classification_report.csv  confusion_matrix.csv
mlruns/1/42a1425f85aa43118f980ffe67b83eac/artifacts/reports/: classification_report.csv  confusion_matrix.csv
mlruns/1/5d7959e121ce41059f65ed1fba819947/artifacts/reports/: classification_report.csv
mlruns/1/71dcbbc953164ebe91bcad0b2f9c7274/artifacts/reports/: classification_report.csv  confusion_matrix.csv
mlruns/1/7b7676c2b05e4678805d5fbe11d5993a/artifacts/reports/: confusion_matrix.csv
notebooks/: Data.ipynb  TD2_transfer_learning.ipynb  rdm_forest.ipynb
raw/SIEM_Dataset/: README.md
scripts/: test.py
src/: create_datasets.py  data.py  evaluate.py  few_shot_learner.py  random_forest.py  test.py  transfer_learning.py
(+8 files in other folders)
