[project]
name = "siem-severity-classifier"
version = "0.1.0"
description = "Transfer learning for SIEM dataset severity classification"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "scikit-learn>=1.3.0",
    "evaluate>=0.4.0",
    "numpy>=1.24.0",
    "accelerate>=0.20.0",
    "pandas",
    "mlflow",
    "openai"
]